log
Fri 20 Oct 2023 01:42:58 AM UTC: 
 tests:  0|4
total_score: 0/70
d7aac46
Fri 20 Oct 2023 01:44:09 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:17: error: expected ‘;’ before ‘dato’
   38 |   dato->size = 0
      |                 ^
      |                 ;
   39 |   dato->heapArray = malloc(3 * sizeof(heapElem));
      |   ~~~~           
heap.c:40:14: error: expected ‘;’ before ‘}’ token
   40 |   return dato
      |              ^
      |              ;
   41 |   }
      |   ~           
Compilation failed
e2cf8d6
Fri 20 Oct 2023 01:44:19 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
5feec51
Fri 20 Oct 2023 01:44:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c735d36
Fri 20 Oct 2023 01:48:03 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:3: error: expected ‘;’ before ‘return’
   23 |   return pq->heapArray[0].data
      |   ^~~~~~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7b33341
Fri 20 Oct 2023 01:48:15 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:30: error: lvalue required as left operand of assignment
   21 |   if (pq == NULL || pq->size = 0)
      |                              ^
Compilation failed
6b8d990
Fri 20 Oct 2023 01:48:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
06083be
Fri 20 Oct 2023 02:15:35 AM UTC: 
 heap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:3: error: expected expression before ‘if’
   32 |   if (pq->size == pq->capac)
      |   ^~
heap.c:32:3: error: ‘return’ with a value, in function returning void [-Werror=return-type]
heap.c:28:6: note: declared here
   28 | void heap_push(Heap* pq, void* data, int priority){
      |      ^~~~~~~~~
heap.c:41:17: error: ‘i’ undeclared (first use in this function)
   41 |   pq->heapArray[i].priority = priority
      |                 ^
heap.c:41:17: note: each undeclared identifier is reported only once for each function it appears in
heap.c:41:39: error: expected ‘;’ before ‘while’
   41 |   pq->heapArray[i].priority = priority
      |                                       ^
      |                                       ;
   42 |   while (i > 0 &&
      |   ~~~~~                                
cc1: all warnings being treated as errors
Compilation failed
7c2a7fa
Fri 20 Oct 2023 02:15:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:3: error: expected ‘,’ or ‘;’ before ‘pq’
   40 |   pq->heapArray[i].data = data;
      |   ^~
heap.c:41:39: error: expected ‘;’ before ‘while’
   41 |   pq->heapArray[i].priority = priority
      |                                       ^
      |                                       ;
   42 |   while (i > 0 &&
      |   ~~~~~                                
Compilation failed
f7bcc7f
Fri 20 Oct 2023 02:16:15 AM UTC: 
 heap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:3: error: expected ‘,’ or ‘;’ before ‘pq’
   40 |   pq->heapArray[i].data = data;
      |   ^~
heap.c:45:5: error: expected ‘,’ or ‘;’ before ‘pq’
   45 |     pq->heapArray[i] = pq->heapArray[(i - 1) / 2];
      |     ^~
heap.c:49:13: error: expected ‘;’ before ‘}’ token
   49 |   pq->size++
      |             ^
      |             ;
   50 | }
      | ~            
Compilation failed
857fc9a
